CONFIG EDIT USER - fix overlapping elements

--- a/css/config.css
+++ b/css/config.css
@@ -8,7 +8,7 @@
 
 .tele-user-permissions .tele-perm-tabs.ui-tabs.ui-widget.ui-widget-content.ui-corner-all .tabs{
 	clear: both;
-	min-height: 300px;
+	/*min-height: 300px;*/
 }
 
 .tele-user-permissions .tele-perm-tabs.ui-tabs.ui-widget.ui-widget-content.ui-corner-all ul{
@@ -162,10 +162,10 @@ body .jstree .tele-button {
 .ui-tabs .ui-tabs-panel,
 .ui-tabs.ui-widget-content {
 	border: none;
-	background: #E6E6E6;
+	background: transparent;
 	background-image: none;
-	top: 30px;
-	position: relative;
+	/*top: 30px;*/
+	/*position: relative;*/
 }
 .tele-group-wrap-right .ui-tabs.ui-widget-content {
 	top: 60px;
@@ -711,10 +711,10 @@ body .jstree .tele-button {
 	width: 99%;
 }
 
-.tele-radios.tele-limit-type .tele-title-1{
+/*.tele-radios.tele-limit-type .tele-title-1{
 	margin-left: 15px;
 	width: 100%;
-}
+}*/
 
 .tele-radios.tele-limit-type-group{
 	margin-left: 15px;
@@ -1004,16 +1004,34 @@ body .jstree .tele-button {
 	margin-left: -20px;
 }
 
+.tele-user-permissions .tele-title-1{
+	margin-bottom: 60px;
+}
+
+.tele-config-content-right .tele-limit-type {
+	width: 100%;
+	float: left;
+	padding-left: 20px;
+	margin-bottom: 20px;
+}
+
+.container-limits{
+	margin-left: 20px;
+}
+
 .tele-user-groups-container{
 	float: right;
     /*margin-top: 55px;*/
     width: 50%;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1300px) {
 	.tele-user-permissions,
-	.tele-user-groups-container{
+	.tele-user-groups-container,
+	.tele-config-content-right .tele-limit-type{
 		width: 100%;
+		float: left;
+		padding-left: 20px;
 	}
 }
 
