--- a/css/widgets.css
+++ b/css/widgets.css
@@ -498,7 +498,7 @@ a.tele-input-input {
 .tele-form {
 	padding: 20px;
 	float: left;
-	width: 40%;
+	/*width: 40%;*/
 }
 .tele-form-title {
 	font-size: 28px;
@@ -512,7 +512,7 @@ a.tele-input-input {
 	margin-top: 30px;
 }
 .tele-form-inner {
-	width: 33%;
+	/*width: 33%;*/
 }
 
 .tele-form-item .tele-checkbox {
